--- a/package.json
+++ b/package.json
@@ -1,12 +1,36 @@
 {
   "name": "kkcode",
   "version": "0.1.2",
-  "description": "Team-first coding CLI with themed UX, usage metering and diff review workflow.",
+  "description": "Team-first terminal AI coding agent CLI with LongAgent orchestration, GitHub integration and themed UX.",
   "type": "module",
   "packageManager": "pnpm@10.5.2",
+  "license": "Apache-2.0",
+  "author": "kkelly-offical",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kkelly-offical/kkcode.git"
+  },
+  "homepage": "https://github.com/kkelly-offical/kkcode",
+  "bugs": {
+    "url": "https://github.com/kkelly-offical/kkcode/issues"
+  },
+  "keywords": [
+    "ai",
+    "coding-agent",
+    "cli",
+    "terminal",
+    "github",
+    "longagent",
+    "code-review",
+    "mcp"
+  ],
   "bin": {
     "kkcode": "./src/index.mjs"
   },
+  "files": [
+    "src/",
+    "LICENSE"
+  ],
   "engines": {
     "node": ">=22"
   },
