--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@kkelly-offical/kkcode",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Team-first terminal AI coding agent CLI with LongAgent orchestration, GitHub integration and themed UX.",
   "type": "module",
   "packageManager": "pnpm@10.5.2",
-  "license": "Apache-2.0",
+  "license": "GPL-3.0",
   "author": "kkelly-offical",
   "repository": {
     "type": "git",
