docs: 新增模型配置样例(GLM5/DeepSeek/Ollama/多provider) + 三级权限模板 + 全量配置参考

--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -1,152 +1,211 @@
-# kkcode 配置示例 - Git 自动化功能
+# =============================================================================
+# kkcode 完整配置参考
+# =============================================================================
+# 配置文件加载优先级：项目配置 > 用户配置 > 默认配置
+#
+# 配置文件位置：
+#   用户级：~/.config/kkcode/config.yaml
+#   项目级：.kkcode/config.yaml 或项目根目录 kkcode.yaml
+#
+# 支持格式：YAML (.yaml/.yml) 和 JSON (.json)
+# =============================================================================
 
 # =============================================================================
-# Git 自动化配置
-# =============================================================================
-git_auto:
-  # 启用 Git 自动化功能（默认：true）
-  # 禁用后，所有 git_* 工具将不可用
-  enabled: true
-  
-  # 每次 AI 修改文件前自动创建快照（默认：true）
-  # 启用后，AI 在执行 write/edit/patch 前会自动创建幽灵提交
-  auto_snapshot: true
-  
-  # 每个仓库最多保留的快照数量（默认：50）
-  max_snapshots: 50
-  
-  # 快照保留天数，过期后自动清理（默认：7）
-  ttl_days: 7
-  
-  # 禁止 AI 执行 git commit（默认：true）
-  # 用户必须手动运行 git commit 来创建正式提交
-  forbid_commit: true
-  
-  # 禁止 AI 执行 git push（默认：true）
-  # 用户必须手动审查后推送
-  forbid_push: true
-  
-  # =============================================================================
-  # 全自动化模式配置（⚠️ 高级用户）
-  # =============================================================================
-  # 警告：启用后 AI 将拥有更多权限，包括自动提交和推送
-  # 建议仅在受控环境或 CI/CD 场景中使用
-  
-  # 启用全自动化模式（默认：false）
-  full_auto: false
-  
-  # 允许 AI 自动执行 git commit（需 full_auto: true）
-  auto_commit: false
-  
-  # 允许 AI 自动执行 git push（需 full_auto: true）
-  auto_push: false
-  
-  # 自动 stage 更改（默认：true，需 full_auto: true）
-  auto_stage: true
-  
-  # 允许危险操作如 force push（默认：false，需 full_auto: true）
-  # ⚠️ 极度危险，可能导致数据丢失
-  allow_dangerous_ops: false
-
-# =============================================================================
-# 提供者配置（OpenAI, Anthropic, Ollama 等）
+# 模型提供者配置
 # =============================================================================
 provider:
-  default: "openai"
-  
+  default: "dashscope"
+  strict_mode: false
+
+  # --- OpenAI ---
   openai:
     type: "openai"
     api_key_env: "OPENAI_API_KEY"
-    default_model: "gpt-4"
-    timeout_ms: 60000
-    
+    default_model: "gpt-5.3-codex"
+    models: [gpt-5.3-codex, gpt-5.2]
+    timeout_ms: 120000
+    stream_idle_timeout_ms: 120000
+    max_tokens: 32768
+    retry_attempts: 3
+    retry_base_delay_ms: 800
+    stream: true
+
+  # --- Anthropic ---
   anthropic:
     type: "anthropic"
     api_key_env: "ANTHROPIC_API_KEY"
-    default_model: "claude-3-opus-20240229"
-    timeout_ms: 60000
+    default_model: "claude-sonnet-4-6"
+    models: [claude-opus-4-6, claude-sonnet-4-6, claude-sonnet-4-5, claude-haiku-4-5-20251001]
+    timeout_ms: 120000
+    max_tokens: 32768
+    retry_attempts: 3
+    stream: true
+
+  # --- DashScope（通义千问 Qwen 系列）---
+  dashscope:
+    type: "openai-compatible"
+    base_url: "https://dashscope.aliyuncs.com/compatible-mode/v1"
+    # 海外用户: https://dashscope-intl.aliyuncs.com/compatible-mode/v1
+    api_key_env: "DASHSCOPE_API_KEY"
+    default_model: "qwen3.5-plus-latest"
+    models:
+      - qwen3.5-plus-latest
+      - qwen3.5-plus
+      - qwen3-max
+      - qwen3-coder-plus
+      - qwen3-coder-flash
+      - qwen-max
+      - qwen-plus
+    timeout_ms: 120000
+    max_tokens: 32768
+    retry_attempts: 3
+    stream: true
+
+  # --- 智谱 GLM ---
+  zhipu:
+    type: "openai-compatible"
+    base_url: "https://open.bigmodel.cn/api/paas/v4"
+    # 海外用户: https://api.z.ai/api/paas/v4
+    api_key_env: "ZHIPU_API_KEY"
+    default_model: "glm-5"
+    models: [glm-5, glm-4.5, glm-4.5-air]
+    timeout_ms: 120000
+    max_tokens: 32768
+    retry_attempts: 3
+    stream: true
+
+  # --- DeepSeek ---
+  deepseek:
+    type: "openai-compatible"
+    base_url: "https://api.deepseek.com"
+    api_key_env: "DEEPSEEK_API_KEY"
+    default_model: "deepseek-chat"
+    models: [deepseek-chat, deepseek-reasoner]
+    timeout_ms: 120000
+    max_tokens: 32768
+    retry_attempts: 3
+    stream: true
+
+  # --- 本地 Ollama ---
+  ollama:
+    type: "ollama"
+    base_url: "http://localhost:11434"
+    api_key_env: ""
+    default_model: "qwen3:32b"
+    timeout_ms: 600000
+    stream_idle_timeout_ms: 300000
+    max_tokens: 16384
+    retry_attempts: 1
+    stream: true
 
 # =============================================================================
 # Agent 配置
 # =============================================================================
 agent:
-  default_mode: "code"  # code, ask, plan, architect, debug
+  default_mode: "agent"       # ask | plan | agent | longagent
   max_steps: 50
-  
+
   longagent:
-    max_iterations: 10
+    max_iterations: 30
     no_progress_warning: 3
+    no_progress_limit: 5
+    heartbeat_timeout_ms: 120000
     checkpoint_interval: 5
-    
-    # 并行执行配置
+
     parallel:
       enabled: true
       max_concurrency: 3
-      task_timeout_ms: 300000
+      stage_pass_rule: "all_success"
+      task_timeout_ms: 600000
+      task_max_retries: 2
+
+    hybrid:
+      enabled: true
+      intake: true
+      completion_validation: true
+      tdd_mode: false
+      cross_review: true
+      incremental_gates: true
+
+    git:
+      enabled: "ask"          # true | false | "ask"
+      auto_branch: true
+      auto_commit_stages: true
+      auto_merge: true
+
+# =============================================================================
+# 权限配置（详见 configs/permission-*.yaml 模板）
+# =============================================================================
+permission:
+  default_policy: "ask"       # allow | ask | deny
+  non_tty_default: "deny"     # allow | allow_once | deny
+  rules:
+    - tool: read
+      action: allow
+    - tool: glob
+      action: allow
+    - tool: grep
+      action: allow
+    - tool: list
+      action: allow
+
+# =============================================================================
+# Git 自动化配置
+# =============================================================================
+git_auto:
+  enabled: true
+  auto_snapshot: true
+  max_snapshots: 50
+  ttl_days: 7
+  forbid_commit: true
+  forbid_push: true
+  full_auto: false
+
+# =============================================================================
+# 会话配置
+# =============================================================================
+session:
+  max_history: 30
+  recovery: true
+  compaction_threshold_ratio: 0.7
+  compaction_threshold_messages: 50
+  context_cache_points: true
 
 # =============================================================================
 # 工具配置
 # =============================================================================
 tool:
-  # 文件写入锁配置
-  write_lock:
-    mode: "file_lock"  # file_lock 或 none
-    wait_timeout_ms: 120000
-  
-  # 工具来源
   sources:
-    builtin: true      # 内置工具（包括 git_auto）
+    builtin: true
     local: true
-    plugin: false
     mcp: true
+    plugin: true
+  bash_timeout_ms: 120000
+  write_lock:
+    mode: "file_lock"
+    wait_timeout_ms: 120000
 
 # =============================================================================
-# 运行时配置
-# =============================================================================
-runtime:
-  tool_registry_cache_ttl_ms: 30000
-  mcp_refresh_ttl_ms: 60000
-
-# =============================================================================
-# 审查配置
-# =============================================================================
-review:
-  sort: "risk_desc"    # risk_desc, time_desc, time_asc
-  default_lines: 3
-  max_expand_lines: 100
-  
-  risk_weights:
-    edit: 1.0
-    write: 0.8
-    delete: 1.5
-    exec: 2.0
-
-# =============================================================================
-# 使用量和预算配置
+# 使用量与预算
 # =============================================================================
 usage:
-  pricing_file: null   # 自定义定价文件路径
-  
   budget:
-    enabled: false
-    monthly_limit_usd: 100
+    session_usd: null
+    global_usd: null
     warn_at_percent: 80
-    strategy: "warn"   # warn 或 block
+    strategy: "warn"          # warn | block
 
 # =============================================================================
 # UI 配置
 # =============================================================================
 ui:
-  layout: "comfortable"  # compact 或 comfortable
+  layout: "compact"           # compact | comfortable
   markdown_render: true
-  
   mode_colors:
-    code: "#4CAF50"
-    ask: "#2196F3"
-    plan: "#FF9800"
-    architect: "#9C27B0"
-    debug: "#F44336"
-    
+    ask: "#8da3b9"
+    plan: "#00b7c2"
+    agent: "#2ac26f"
+    longagent: "#ff7a33"
   status:
     show_cost: true
     show_token_meter: true
